# Cloud-

AWS/: pyproject.toml  report.md
AWS/knowledge/: user_preference.txt
AWS/src/compliance_assistant/: crew.py  main.py
AWS/src/compliance_assistant/config/: agents.yaml  tasks.yaml
GCP/chat-with-paperswithcodee/: Pulumi.gcp.yaml  Pulumi.yaml  __main__.py  app.yaml  bapp.py  cmd.md  requirements.txt  sample.env  test_openai.py
GCP/chat-with-paperswithcodee/src/: bcallbacks.py  bprompt.py  brag.py  scholar.py
